# prelegal

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json
.claude/: settings.json
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: auth.py  db.py  llm.py  main.py  manifests.py  models.py  ratelimit.py
backend/app/routes/: auth.py  chat.py  documents.py  templates.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_cors.py  test_documents.py  test_llm.py  test_security.py  test_static.py  test_templates.py
frontend/: .gitignore  TESTING.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Disclaimer.tsx  DocForm.test.tsx  DocForm.tsx  DocumentSidebar.tsx  GenericDocPreview.test.tsx  GenericDocPreview.tsx  LanguageToggle.tsx  MNDAChat.test.tsx  MNDAChat.tsx  MNDAForm.test.tsx  MNDAForm.tsx  MNDAPreview.test.tsx  MNDAPreview.tsx  SaveStatus.tsx
frontend/e2e/: chat.spec.ts  csa.spec.ts  documents.spec.ts  login.spec.ts  mnda.spec.ts
frontend/lib/: api.ts  docManifest.test.ts  docManifest.ts  i18n.ts  mndaState.test.ts  mndaState.ts  mndaTemplate.test.ts  mndaTemplate.ts  session.ts  useDocTemplate.ts
scripts/: docker-entrypoint.sh  start-linux.sh  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-mac.sh  stop-windows.ps1
templates/: LICENSE  README.md  templates.json
templates/mutual-nda/: Mutual-NDA.md  (+1 more)
(+15 files in other folders)
