[project]
name = "prelegal-backend"
version = "0.1.0"
description = "Prelegal backend (FastAPI + SQLite)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "litellm>=1.52",
    "bcrypt>=4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import order, B bugbear, UP pyupgrade.
select = ["E", "F", "W", "I", "B", "UP"]
# B008: `Depends(...)` in argument defaults is the standard FastAPI idiom.
ignore = ["B008"]
